@@ -513,8 +513,14 @@ void MaterialInfo::getMatchBits(df::job_item_flags2 &ok, df::job_item_flags2 &ma
     TEST(sewn_imageless, is_cloth);
     TEST(glass_making, MAT_FLAG(CRYSTAL_GLASSABLE));
 
-    TEST(fire_safe, material->heat.melting_point > 11000);
-    TEST(magma_safe, material->heat.melting_point > 12000);
+    TEST(fire_safe, material->heat.melting_point > 11000
+                    && material->heat.boiling_point > 11000
+                    && material->heat.ignite_point > 11000
+                    && material->heat.heatdam_point > 11000);
+    TEST(magma_safe, material->heat.melting_point > 12000
+                    && material->heat.boiling_point > 12000
+                    && material->heat.ignite_point > 12000
+                    && material->heat.heatdam_point > 12000);
     TEST(deep_material, FLAG(inorganic, inorganic_flags::SPECIAL));
     TEST(non_economic, !inorganic || !(plotinfo && vector_get(plotinfo->economic_stone, index)));
 
